bugfix for username dropdown top margin on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -492,4 +492,8 @@ table td {
     .g-recaptcha {
 			margin: 0;
 		}
+
+		.text-navs {
+			margin-top: 0;
+		}
 }
